2009-09-03  Glenn Morris  <rgm@gnu.org>

	* mm-util.el (mm-emacs-mule, mm-default-multibyte-p):
	* rfc2047.el (rfc2047-encode-message-header): Use default-value rather
	than default-enable-multibyte-characters.

2009-09-02  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (gnus-float-time): New function.
	* gnus-delay.el (gnus-delay-article):
	* gnus-sum.el (gnus-thread-latest-date):
	* gnus-util.el (gnus-user-date): Use gnus-float-time.
	* nnspool.el (nnspool-request-newgroups):
	Use gnus-float-time rather than time-to-seconds.
	* ecomplete.el (ecomplete-add-item): In Emacs, use float-time.

	* gnus-art.el (gnus-signature-face, gnus-header-from-face)
	(gnus-header-subject-face, gnus-header-newsgroups-face)
	(gnus-header-name-face, gnus-header-content-face):
	* gnus-cite.el (gnus-cite-attribution-face, gnus-cite-face-1)
	(gnus-cite-face-2, gnus-cite-face-3, gnus-cite-face-4)
	(gnus-cite-face-5, gnus-cite-face-6, gnus-cite-face-7)
	(gnus-cite-face-8, gnus-cite-face-9, gnus-cite-face-10)
	(gnus-cite-face-11):
	* gnus-picon.el (gnus-picon-xbm-face, gnus-picon-face):
	* gnus-srvr.el (gnus-server-agent-face, gnus-server-opened-face)
	(gnus-server-closed-face, gnus-server-denied-face)
	(gnus-server-offline-face):
	* gnus.el (gnus-group-news-1-face, gnus-group-news-1-empty-face)
	(gnus-group-news-2-face, gnus-group-news-2-empty-face)
	(gnus-group-news-3-face, gnus-group-news-3-empty-face)
	(gnus-group-news-4-face, gnus-group-news-4-empty-face)
	(gnus-group-news-5-face, gnus-group-news-5-empty-face)
	(gnus-group-news-6-face, gnus-group-news-6-empty-face)
	(gnus-group-news-low-face, gnus-group-news-low-empty-face)
	(gnus-group-mail-1-face, gnus-group-mail-1-empty-face)
	(gnus-group-mail-2-face, gnus-group-mail-2-empty-face)
	(gnus-group-mail-3-face, gnus-group-mail-3-empty-face)
	(gnus-group-mail-low-face, gnus-group-mail-low-empty-face)
	(gnus-summary-selected-face, gnus-summary-cancelled-face)
	(gnus-summary-high-ticked-face, gnus-summary-low-ticked-face)