@@ -89,8 +89,8 @@
 	      (when (re-search-forward "^=yend.*$" end t)
 		(setq last (match-beginning 0))
 		(setq footer-alist (yenc-parse-line (match-string 0)))
-		(let (default-enable-multibyte-characters)
-		  (setq work-buffer (generate-new-buffer " *yenc-work*")))
+		(letf (((default-value 'enable-multibyte-characters) nil))
+		      (setq work-buffer (generate-new-buffer " *yenc-work*")))
 		(while (< first last)
 		  (setq char (char-after first))
 		  (cond ((or (eq char ?\r)
